[gd_scene load_steps=30 format=3 uid="uid://bda4l1sdyfw76"]

[ext_resource type="Script" uid="uid://lnyjom2ub715" path="res://scripts/managers/achievments_manager.gd" id="1_mpcko"]
[ext_resource type="FontFile" uid="uid://bj8pwquunfxx8" path="res://Pizza Tower.ttf" id="2_qr7qa"]
[ext_resource type="Texture2D" uid="uid://cw64dvnkk3oqm" path="res://arrow.png" id="3_pafnh"]
[ext_resource type="Texture2D" uid="uid://b1a546gu0sy1e" path="res://arrow_green.png" id="4_syhwi"]
[ext_resource type="Texture2D" uid="uid://bh3rusuqfqwpi" path="res://arrow2.png" id="5_32ivr"]
[ext_resource type="Texture2D" uid="uid://c2isxy3781r0g" path="res://arrow_green2.png" id="6_6sjds"]
[ext_resource type="Texture2D" uid="uid://l2atiswygex0" path="res://transitions/bg.jpg" id="7_jcyua"]
[ext_resource type="Texture2D" uid="uid://b8svlp3txe6yc" path="res://difficult_element.png" id="8_6sjds"]
[ext_resource type="Texture2D" uid="uid://cdq8h0bosowb" path="res://gallery item locked.png" id="9_jcyua"]
[ext_resource type="Texture2D" uid="uid://b1lsk1k184epd" path="res://hand sprites/open hand_hearts.png" id="10_x15c4"]
[ext_resource type="Texture2D" uid="uid://cp34ei74jek0o" path="res://hand sprites/fist hand_heats.png" id="11_whyup"]
[ext_resource type="Texture2D" uid="uid://cnjpqqh7tdgsr" path="res://mini games sprites/bosses/gas.png" id="12_gn5jl"]
[ext_resource type="Texture2D" uid="uid://lwj1fhr7k277" path="res://hand sprites/open hand_camo.png" id="12_pjuic"]
[ext_resource type="Texture2D" uid="uid://dhu0gxyygt15l" path="res://hand sprites/fist hand_camo.png" id="13_glprp"]
[ext_resource type="Texture2D" uid="uid://67m3bcjsttlv" path="res://hand sprites/open hand_caution.png" id="14_f7uu2"]
[ext_resource type="Texture2D" uid="uid://dif2866ktpwx8" path="res://hand sprites/fist hand_caution.png" id="15_y6mb1"]
[ext_resource type="Texture2D" uid="uid://d1mrao3pdvet" path="res://hand sprites/open hand_fire.png" id="16_yj46j"]
[ext_resource type="Texture2D" uid="uid://cfnw2a1umf03s" path="res://hand sprites/fist hand_fire.png" id="17_2kf75"]
[ext_resource type="Texture2D" uid="uid://bhfjwa827leh5" path="res://hand sprites/open hand_dalmata.png" id="18_xqofr"]
[ext_resource type="Texture2D" uid="uid://tghgj6km07yq" path="res://hand sprites/fist hand_dalmata.png" id="19_vw0f0"]
[ext_resource type="Texture2D" uid="uid://v6k8ihhvp02k" path="res://hand sprites/open hand_striped.png" id="20_pjuic"]
[ext_resource type="Texture2D" uid="uid://bi6k5y5xsvmvh" path="res://hand sprites/fist hand_striped.png" id="21_glprp"]
[ext_resource type="Texture2D" uid="uid://dq2p27jerg1lf" path="res://hand sprites/open hand_real.png" id="22_f7uu2"]
[ext_resource type="Texture2D" uid="uid://dyk1idfs6okm" path="res://hand sprites/fist hand_real.png" id="23_y6mb1"]

[sub_resource type="Animation" id="Animation_vmxya"]
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("left:icon")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_syhwi")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("buttonback:icon")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_pafnh")]
}

[sub_resource type="Animation" id="Animation_7r7o8"]
resource_name = "arrow_back"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("buttonback:icon")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("3_pafnh"), ExtResource("5_32ivr")]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimationPlayer2")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0, false, false],
"method": &"seek"
}]
}

[sub_resource type="Animation" id="Animation_li7wd"]
resource_name = "arrow_green"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("left:icon")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("4_syhwi"), ExtResource("6_6sjds")]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimationPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0, false, false],
"method": &"seek"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7r7o8"]
_data = {
&"RESET": SubResource("Animation_vmxya"),
&"arrow_back": SubResource("Animation_7r7o8"),
&"arrow_green": SubResource("Animation_li7wd")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_flcwp"]

[node name="Achievments" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mpcko")

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_7r7o8")
}

[node name="Bg" type="Sprite2D" parent="."]
modulate = Color(0.23110586, 0.40934858, 0.4403412, 1)
z_index = -3
position = Vector2(540, 0)
texture = ExtResource("7_jcyua")

[node name="Bg2" type="Sprite2D" parent="."]
modulate = Color(0.23110586, 0.40934858, 0.4403412, 1)
z_index = -3
position = Vector2(540, -2156)
texture = ExtResource("7_jcyua")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="LeaderboardName" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_qr7qa")
theme_override_font_sizes/font_size = 102
text = "
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 60

[node name="arcade" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = -36
theme_override_fonts/font = ExtResource("2_qr7qa")
theme_override_font_sizes/font_size = 68
text = "
        REACH 4 GAME SCORE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="diff1" type="Sprite2D" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/arcade"]
z_index = -1
texture_filter = 1
position = Vector2(541, 69)
texture = ExtResource("8_6sjds")

[node name="GalleryItemLocked" type="Sprite2D" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/arcade"]
texture_filter = 1
position = Vector2(181, 67)
scale = Vector2(0.5, 0.5)
texture = ExtResource("9_jcyua")

[node name="toast" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = -36
theme_override_fonts/font = ExtResource("2_qr7qa")
theme_override_font_sizes/font_size = 68
text = "
        REACH 4 GAME SCORE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="diff1" type="Sprite2D" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/toast"]
z_index = -1
texture_filter = 1
position = Vector2(541, 69)
texture = ExtResource("8_6sjds")

[node name="GalleryItemLocked" type="Sprite2D" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/toast"]
texture_filter = 1
position = Vector2(181, 67)
scale = Vector2(0.5, 0.5)
texture = ExtResource("9_jcyua")

[node name="hearts" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = -36
theme_override_fonts/font = ExtResource("2_qr7qa")
theme_override_font_sizes/font_size = 68
text = "
        REACH 4 GAME SCORE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="diff1" type="Sprite2D" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/hearts"]
z_index = -1
texture_filter = 1
position = Vector2(541, 69)
texture = ExtResource("8_6sjds")

[node name="OpenHand" type="Sprite2D" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/hearts"]
modulate = Color(0, 0, 0, 1)
texture_filter = 1
position = Vector2(148.5, 66.5)
texture = ExtResource("10_x15c4")

[node name="FistHand" type="Sprite2D" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/hearts"]
modulate = Color(0, 0, 0, 1)
texture_filter = 1
position = Vector2(210, 67)
texture = ExtResource("11_whyup")
flip_h = true

[node name="camo" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = -36
theme_override_fonts/font = ExtResource("2_qr7qa")
theme_override_font_sizes/font_size = 68
text = "
        REACH 8 GAME SCORE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="diff1" type="Sprite2D" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/camo"]
z_index = -1
texture_filter = 1
position = Vector2(541, 69)
texture = ExtResource("8_6sjds")

[node name="OpenHand" type="Sprite2D" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/camo"]
modulate = Color(0, 0, 0, 1)
texture_filter = 1
position = Vector2(148.5, 66.5)
texture = ExtResource("12_pjuic")

[node name="FistHand" type="Sprite2D" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/camo"]
modulate = Color(0, 0, 0, 1)
texture_filter = 1
position = Vector2(210, 67)
texture = ExtResource("13_glprp")
flip_h = true

[node name="rope" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = -36
theme_override_fonts/font = ExtResource("2_qr7qa")
theme_override_font_sizes/font_size = 68
text = "
        REACH 10 GAME SCORE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="diff1" type="Sprite2D" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/rope"]
z_index = -1
texture_filter = 1
position = Vector2(541, 69)
texture = ExtResource("8_6sjds")

[node name="GalleryItemLocked" type="Sprite2D" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/rope"]
texture_filter = 1
position = Vector2(181, 67)
scale = Vector2(0.5, 0.5)
texture = ExtResource("9_jcyua")

[node name="caution" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = -36
theme_override_fonts/font = ExtResource("2_qr7qa")
theme_override_font_sizes/font_size = 68
text = "
        REACH 8 GAME SCORE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="diff1" type="Sprite2D" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/caution"]
z_index = -1
texture_filter = 1
position = Vector2(541, 69)
texture = ExtResource("8_6sjds")

[node name="OpenHand" type="Sprite2D" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/caution"]
modulate = Color(0, 0, 0, 1)
texture_filter = 1
position = Vector2(148.5, 66.5)
texture = ExtResource("14_f7uu2")

[node name="FistHand" type="Sprite2D" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/caution"]
modulate = Color(0, 0, 0, 1)
texture_filter = 1
position = Vector2(210, 67)
texture = ExtResource("15_y6mb1")
flip_h = true

[node name="bonfire" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = -36
theme_override_fonts/font = ExtResource("2_qr7qa")
theme_override_font_sizes/font_size = 68
text = "
        REACH 15 GAME SCORE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="diff1" type="Sprite2D" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/bonfire"]
z_index = -1
texture_filter = 1
position = Vector2(541, 69)
texture = ExtResource("8_6sjds")

[node name="GalleryItemLocked" type="Sprite2D" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/bonfire"]
texture_filter = 1
position = Vector2(181, 67)
scale = Vector2(0.5, 0.5)
texture = ExtResource("9_jcyua")

[node name="fire" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = -36
theme_override_fonts/font = ExtResource("2_qr7qa")
theme_override_font_sizes/font_size = 68
text = "
        REACH 15 GAME SCORE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="diff1" type="Sprite2D" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/fire"]
z_index = -1
texture_filter = 1
position = Vector2(541, 69)
texture = ExtResource("8_6sjds")

[node name="OpenHand" type="Sprite2D" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/fire"]
modulate = Color(0, 0, 0, 1)
texture_filter = 1
position = Vector2(148.5, 66.5)
texture = ExtResource("16_yj46j")

[node name="FistHand" type="Sprite2D" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/fire"]
modulate = Color(0, 0, 0, 1)
texture_filter = 1
position = Vector2(210, 67)
texture = ExtResource("17_2kf75")
flip_h = true

[node name="kanji" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = -36
theme_override_fonts/font = ExtResource("2_qr7qa")
theme_override_font_sizes/font_size = 68
text = "
        REACH 20 GAME SCORE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="diff1" type="Sprite2D" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/kanji"]
z_index = -1
texture_filter = 1
position = Vector2(541, 69)
texture = ExtResource("8_6sjds")

[node name="GalleryItemLocked" type="Sprite2D" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/kanji"]
texture_filter = 1
position = Vector2(181, 67)
scale = Vector2(0.5, 0.5)
texture = ExtResource("9_jcyua")

[node name="dalmata" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = -36
theme_override_fonts/font = ExtResource("2_qr7qa")
theme_override_font_sizes/font_size = 68
text = "
        REACH 20 GAME SCORE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="diff1" type="Sprite2D" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/dalmata"]
z_index = -1
texture_filter = 1
position = Vector2(541, 69)
texture = ExtResource("8_6sjds")

[node name="OpenHand" type="Sprite2D" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/dalmata"]
modulate = Color(0, 0, 0, 1)
texture_filter = 1
position = Vector2(148.5, 66.5)
texture = ExtResource("18_xqofr")

[node name="FistHand" type="Sprite2D" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/dalmata"]
modulate = Color(0, 0, 0, 1)
texture_filter = 1
position = Vector2(210, 67)
texture = ExtResource("19_vw0f0")
flip_h = true

[node name="soccer" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = -36
theme_override_fonts/font = ExtResource("2_qr7qa")
theme_override_font_sizes/font_size = 68
text = "
        REACH 30 GAME SCORE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="diff1" type="Sprite2D" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/soccer"]
z_index = -1
texture_filter = 1
position = Vector2(541, 69)
texture = ExtResource("8_6sjds")

[node name="GalleryItemLocked" type="Sprite2D" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/soccer"]
texture_filter = 1
position = Vector2(181, 67)
scale = Vector2(0.5, 0.5)
texture = ExtResource("9_jcyua")

[node name="jail" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = -36
theme_override_fonts/font = ExtResource("2_qr7qa")
theme_override_font_sizes/font_size = 68
text = "
        KILL 20 INVADERS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="diff1" type="Sprite2D" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/jail"]
z_index = -1
texture_filter = 1
position = Vector2(541, 69)
texture = ExtResource("8_6sjds")

[node name="GalleryItemLocked" type="Sprite2D" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/jail"]
texture_filter = 1
position = Vector2(181, 67)
scale = Vector2(0.5, 0.5)
texture = ExtResource("9_jcyua")

[node name="striped" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = -36
theme_override_fonts/font = ExtResource("2_qr7qa")
theme_override_font_sizes/font_size = 68
text = "
        KILL 20 INVADERS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="diff1" type="Sprite2D" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/striped"]
z_index = -1
texture_filter = 1
position = Vector2(541, 69)
texture = ExtResource("8_6sjds")

[node name="OpenHand" type="Sprite2D" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/striped"]
modulate = Color(0, 0, 0, 1)
texture_filter = 1
position = Vector2(148.5, 66.5)
texture = ExtResource("20_pjuic")

[node name="FistHand" type="Sprite2D" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/striped"]
modulate = Color(0, 0, 0, 1)
texture_filter = 1
position = Vector2(210, 67)
texture = ExtResource("21_glprp")
flip_h = true

[node name="pingpong" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = -36
theme_override_fonts/font = ExtResource("2_qr7qa")
theme_override_font_sizes/font_size = 68
text = "
        60 SECONDS ON CLIMB"
horizontal_alignment = 1
vertical_alignment = 1

[node name="diff1" type="Sprite2D" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/pingpong"]
z_index = -1
texture_filter = 1
position = Vector2(541, 69)
texture = ExtResource("8_6sjds")

[node name="GalleryItemLocked" type="Sprite2D" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/pingpong"]
texture_filter = 1
position = Vector2(181, 67)
scale = Vector2(0.5, 0.5)
texture = ExtResource("9_jcyua")

[node name="ham" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = -36
theme_override_fonts/font = ExtResource("2_qr7qa")
theme_override_font_sizes/font_size = 68
text = "
        CLEAN 10 T-SHIRTS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="diff1" type="Sprite2D" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/ham"]
z_index = -1
texture_filter = 1
position = Vector2(541, 69)
texture = ExtResource("8_6sjds")

[node name="GalleryItemLocked" type="Sprite2D" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/ham"]
texture_filter = 1
position = Vector2(181, 67)
scale = Vector2(0.5, 0.5)
texture = ExtResource("9_jcyua")

[node name="vendor" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = -36
theme_override_fonts/font = ExtResource("2_qr7qa")
theme_override_font_sizes/font_size = 68
text = "
        30 SECONDS ON PONG"
horizontal_alignment = 1
vertical_alignment = 1

[node name="diff1" type="Sprite2D" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/vendor"]
z_index = -1
texture_filter = 1
position = Vector2(541, 69)
texture = ExtResource("8_6sjds")

[node name="GalleryItemLocked" type="Sprite2D" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/vendor"]
texture_filter = 1
position = Vector2(181, 67)
scale = Vector2(0.5, 0.5)
texture = ExtResource("9_jcyua")

[node name="real" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = -36
theme_override_fonts/font = ExtResource("2_qr7qa")
theme_override_font_sizes/font_size = 68
text = "
        30 SECONDS ON PONG"
horizontal_alignment = 1
vertical_alignment = 1

[node name="diff1" type="Sprite2D" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/real"]
z_index = -1
texture_filter = 1
position = Vector2(541, 69)
texture = ExtResource("8_6sjds")

[node name="OpenHand" type="Sprite2D" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/real"]
modulate = Color(0, 0, 0, 1)
texture_filter = 1
position = Vector2(148.5, 66.5)
texture = ExtResource("22_f7uu2")

[node name="FistHand" type="Sprite2D" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/real"]
modulate = Color(0, 0, 0, 1)
texture_filter = 1
position = Vector2(210, 67)
texture = ExtResource("23_y6mb1")
flip_h = true

[node name="candle" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = -36
theme_override_fonts/font = ExtResource("2_qr7qa")
theme_override_font_sizes/font_size = 68
text = "
        WRITE 8 KANJIS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="diff1" type="Sprite2D" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/candle"]
z_index = -1
texture_filter = 1
position = Vector2(541, 69)
texture = ExtResource("8_6sjds")

[node name="GalleryItemLocked" type="Sprite2D" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/candle"]
texture_filter = 1
position = Vector2(181, 67)
scale = Vector2(0.5, 0.5)
texture = ExtResource("9_jcyua")

[node name="boss" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = -36
theme_override_fonts/font = ExtResource("2_qr7qa")
theme_override_font_sizes/font_size = 68
text = "
        UNLOCK ALL"
horizontal_alignment = 1
vertical_alignment = 1

[node name="diff1" type="Sprite2D" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/boss"]
z_index = -1
texture_filter = 1
position = Vector2(541, 69)
texture = ExtResource("8_6sjds")

[node name="GalleryItemLocked" type="Sprite2D" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/boss"]
modulate = Color(0, 0, 0, 1)
texture_filter = 1
position = Vector2(181, 67)
scale = Vector2(0.15, 0.15)
texture = ExtResource("12_gn5jl")

[node name="blank" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = -36
theme_override_fonts/font = ExtResource("2_qr7qa")
theme_override_font_sizes/font_size = 68
horizontal_alignment = 1
vertical_alignment = 1

[node name="buttonback" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.026851851
anchor_top = 0.024074074
anchor_right = 0.24153072
anchor_bottom = 0.13518518
offset_left = 1.0
offset_top = 4.0
offset_right = 1.0000305
offset_bottom = 4.0
pivot_offset = Vector2(110, 50)
theme_override_fonts/font = ExtResource("2_qr7qa")
theme_override_font_sizes/font_size = 64
theme_override_icons/icon = ExtResource("3_pafnh")
theme_override_styles/focus = SubResource("StyleBoxEmpty_flcwp")
icon = ExtResource("3_pafnh")
flat = true
icon_alignment = 1

[connection signal="mouse_entered" from="buttonback" to="." method="_on_buttonback_mouse_entered"]
[connection signal="mouse_exited" from="buttonback" to="." method="_on_buttonback_mouse_exited"]
[connection signal="pressed" from="buttonback" to="." method="_on_buttonback_pressed"]
